Fixed spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,9 @@
   margin: 0;
   padding: 0;
   font-family: 'PTSans', sans-serif;
+
+}
+
+html,body{
+  overflow-x: hidden;
 }
